--- a/index.html
+++ b/index.html
@@ -4,11 +4,28 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="styles.css">
-  <link rel="icon" type="image/png" href="./images/calavera.png">
+  <link rel="icon" type="image/png " href="./images/calavera.png">
   <title>Skulls and Bombs</title>
 </head>
 <body>
-  
+  <div class="game-container">
+    <canvas id="game"></canvas>
+
+    <div class="btns">
+      <button id="up">Arriba</button>
+      <button id="left">Izquierda</button>
+      <button id="rigth">Derecha</button>
+      <button id="down">Abajo</button>
+    </div>
+
+    <div class="messages">
+      <p>Párrafo de ejemplo</p>
+    </div>
+
+  </div>
+
+
+  <script src="maps.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
